--- a/src/config/config.json
+++ b/src/config/config.json
@@ -5,20 +5,20 @@
     "database": "brgfbrlyjvkio1fyjmbr",
     "host": "brgfbrlyjvkio1fyjmbr-mysql.services.clever-cloud.com",
     "dialect": "mysql",
-    "logging":false
+    "logging": false
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
+    "username": "uxvr6hq15yenoiya",
+    "password": "7yHHakLfSiN44VUPrW8p",
+    "database": "brgfbrlyjvkio1fyjmbr",
+    "host": "brgfbrlyjvkio1fyjmbr-mysql.services.clever-cloud.com",
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "username": "uxvr6hq15yenoiya",
+    "password": "7yHHakLfSiN44VUPrW8p",
+    "database": "brgfbrlyjvkio1fyjmbr",
+    "host": "brgfbrlyjvkio1fyjmbr-mysql.services.clever-cloud.com",
     "dialect": "mysql"
   }
 }
