--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT = 3000
-CLIENT_URL = https://tree-fe-alpha.vercel.app
+CLIENT_URL = https://tree-fe-xgav.vercel.app
 SECRET_JWT = jfsdklfjdslkfjsdlfjds
 DB_HOST = "brgfbrlyjvkio1fyjmbr-mysql.services.clever-cloud.com"
 DB_PASS = "7yHHakLfSiN44VUPrW8p"
